add login endpoint with JWT and credential validation

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.14.2",
     "cloudinary": "^2.6.1",
     "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.0",
