--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.8.0",
     "morgan": "^1.10.0",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.0",
